<resources>
    <string name="app_name">Movie </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="release_data">Fecha de lanzamiento:</string>
    <string name="popularity">Popularidad:</string>
    <string name="genders">Géneros:</string>
    <string name="overview">Descripción:</string>
    <string name="text_empty">- - -</string>
    <string name="budget">Presupuesto:</string>
    <string name="runtime">Duración de la película:</string>
    <string name="runtimeLink">%s min.</string>

</resources>