<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".ui.view.DetailsFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        />

    <ImageView
        android:id="@+id/statusOffline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:src="@drawable/offline"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginBottom="@dimen/text_normal"
            app:collapsedTitleTextAppearance="@style/Widget.Design.CollapsingToolbar"
            app:expandedTitleTextAppearance="@style/Widget.Design.CollapsingToolbar"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white"
            app:extraMultilineHeightEnabled="false"
            app:contentScrim="@color/black_transparent"
            tools:title="Avatar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax" >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_transparent" />

            </RelativeLayout>

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_large">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/budget"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBudget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                app:layout_constraintTop_toTopOf="@+id/textView1"
                tools:text="$1.000.000" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/popularity"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <TextView
                android:id="@+id/tvPopularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                tools:text="2103.388" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/release_data"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tvReleaseData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                tools:text="27/11/2222" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/genders"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/tvGenders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                tools:text="Terror, Misterio, Suspense." />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/runtime"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/tvRuntime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                tools:text="112 min" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textStyle="bold"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/tvOverviewEmpty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="@dimen/text_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                android:text="@string/text_empty" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingStart="5dp"
                android:textSize="@dimen/text_normal"
                app:layout_constraintEnd_toEndOf="@+id/tvGenders"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="Descripsion de la pelicula." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>